--- a/_posts/2014-09-16-sound.markdown
+++ b/_posts/2014-09-16-sound.markdown
@@ -1,7 +1,11 @@
 ---
-layout: default
-title:  "Sound&Videos"
+layout: video
+title:  "sound&videos"
 categories: text
+videos:
+- <iframe src="//player.vimeo.com/video/90461558?title=0&amp;byline=0&amp;portrait=0&amp;color=ff555d" width="480" height="269" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+- <iframe src="//player.vimeo.com/video/92393790?title=0&amp;byline=0&amp;portrait=0&amp;color=ff555d" width="480" height="270" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+- <iframe src="//player.vimeo.com/video/90983123?title=0&amp;byline=0&amp;portrait=0&amp;color=ff555d" width="480" height="270" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 ---
 
 Video artist Marcel Weber (MFO) has created three videos interpreting Bass, Noise and Drone, accompanied by especially composed music made Kode9, Ben Frost and Tim Hecker, from which Geza Schoen drew inspiration.
