--- a/_posts/2014-09-16-about.markdown
+++ b/_posts/2014-09-16-about.markdown
@@ -1,8 +1,21 @@
 ---
-layout: post
+layout: home
 title:  "About"
 categories: text
-img: noise-1.jpg
+img: 
+- slide-1.jpg
+- slide-2.jpg
+- slide-3.jpg
+- slide-4.jpg
+- slide-5.jpg
+- slide-6.jpg
+- slide-7.jpg
+- slide-8.jpg
+- slide-9.jpg
+- slide-10.jpg
+- slide-11.jpg
+- slide-12.jpg
+- slide-13.jpg
 ---
 
 Bringing together scene and sound, Ephemera is an installation that presents olfactory compositions based on musical resonances and reverberations. The nose behind the project is Berlin-based Geza Schoen, known for the groundbreaking Escentric Molecules series as well as various avant-garde/conceptual scents.  
