--- a/_posts/2014-09-16-perfume.md
+++ b/_posts/2014-09-16-perfume.md
@@ -7,8 +7,8 @@ img:
 - drone.jpg
 - bass.jpg
 textz:
-- <h4>Noise</h4> <p> Geza Schoen translated Bass into a scent which opens with woodsmoke and rum notes, developing into leather, mastic, and tea notes, and finishing with castoreum and moss, among other elements.</p>
-- <h4>Drone</h4> <p>For Geza Schoen, Drone translated into aldehydes and air notes, developing to fir and juniper, with a base of patchouli, ambergris, and vetiver.</p>
-- <h4>Bass</h4> <p>Geza Schoen connected Noise with aldehydes, ozone, black pepper, saffron, and labdanum, to name but a few.</p>
+- <h4>Noise</h4> <p> The notion of the track “Bass,” by Steve Goodman, connects with childhood memories triggered by the sound and the scent he remembers of a broken, burning vacuum cleaner. Schoen translated this to a scent which opens with woodsmoke and rum notes, developing into leather, mastic, and tea notes, and finishing with castoreum and moss.</p>
+- <h4>Drone</h4> <p>Tim Hecker’s “Drone” composition does not have any direct personal narrative, drawing instead on Hecker’s own imagining of “a speculative day-glow incense from rituals where long-form sound induces levitation.” For Schoen, that translates into aldehydes and air notes, developing to fir and juniper, with a base of patchouli, ambergris, and vetiver.</p>
+- <h4>Bass</h4> <p>The notion of the track “Bass,” by Steve Goodman, connects with childhood memories triggered by the sound and the scent he remembers of a broken, burning vacuum cleaner. Schoen translated this to a scent which opens with woodsmoke and rum notes, developing into leather, mastic, and tea notes, and finishing with castoreum and moss.</p>
 ---
 
