--- a/_posts/2014-09-16-contact.md
+++ b/_posts/2014-09-16-contact.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Contact"
 categories: text
-img: all.jpg
+img: box.jpg
 ---
 
 Write to [info@ephemera.pl](mailto:info@ephemera.pl) for information on the Ephemera installations or Ephemera perfumes.
