--- a/_posts/2014-09-16-perfume.md
+++ b/_posts/2014-09-16-perfume.md
@@ -7,8 +7,8 @@ img:
 - drone.jpg
 - bass.jpg
 textz:
-- <h4>Noise</h4> <p> The notion of the track “Bass,” by Steve Goodman, connects with childhood memories triggered by the sound and the scent he remembers of a broken, burning vacuum cleaner. Schoen translated this to a scent which opens with woodsmoke and rum notes, developing into leather, mastic, and tea notes, and finishing with castoreum and moss.</p>
-- <h4>Drone</h4> <p>Tim Hecker’s “Drone” composition does not have any direct personal narrative, drawing instead on Hecker’s own imagining of “a speculative day-glow incense from rituals where long-form sound induces levitation.” For Schoen, that translates into aldehydes and air notes, developing to fir and juniper, with a base of patchouli, ambergris, and vetiver.</p>
-- <h4>Bass</h4> <p>The notion of the track “Bass,” by Steve Goodman, connects with childhood memories triggered by the sound and the scent he remembers of a broken, burning vacuum cleaner. Schoen translated this to a scent which opens with woodsmoke and rum notes, developing into leather, mastic, and tea notes, and finishing with castoreum and moss.</p>
+- <h4>Noise</h4> <p>The perfume representing Noise opens with sharp metallic notes, like the sound itself aldehydes and ozone, connected with elements of black pepper. The scent hides softer notes of magnolia, orchid and saffron, which are based on the heavy, burning intensity of amber, labdanum and leather, spiced with notes of cedar wood.</p>
+- <h4>Drone</h4> <p>The long-form, ritualistic sounds of Drone have inspired Geza to create a scent with notes of aldehydes and air notes - to evoke levitation - as well as fresh green lime. The heart of Drone is spiced with fir and juniper berry, as well as hedione. In its base, Drone contains traces of ambergris and patchouli, with fresh notes of vetiver and cedar wood.</p>
+- <h4>Bass</h4> <p>Like the sound itself, Geza Schoen’s Bass reverberates into physical, powerful forms. Opening with notes of woodsmoke and angelica root, the scent develops into a leather complex and tea notes, among others. The base of this perfume includes the intensity of castoreum and incense, lightened by the scents of moss and cedar wood.</p>
 ---
 
