--- a/_posts/2014-09-16-sound.md
+++ b/_posts/2014-09-16-sound.md
@@ -12,4 +12,4 @@ authors:
 - Bass // Steve Goodman (aka Kode9)
 ---
 
-Video artist Marcel Weber (MFO) has created three videos interpreting Bass, Noise and Drone, accompanied by the music from which Geza Schoen drew inspiration.
+Video artist Marcel Weber (MFO) created three videos interpreting Bass, Noise and Drone. Videos contain the music composed by Steve Goodman aka Kode9 (Bass), Ben Frost (Noise) and Tim Hecker (Drone), from which Geza Schoen drew inspiration for the creation of the three Ephemera scents.
