--- a/_posts/2014-09-16-about.md
+++ b/_posts/2014-09-16-about.md
@@ -13,7 +13,7 @@ Ephemera presents olfactory compositions based on musical resonances and reverbe
 <br/>
 
 
-In the first phase of the project, three musicians - Ben Frost, Tim Hecker, and Steve Goodman (aka Kode9) - created raw sonic material which Schoen then reinterpreted to create three different scents: Noise, Drone and Bass. 
+In the first phase of the project, three musicians - Ben Frost, Tim Hecker, and Steve Goodman (aka Kode<span class="kode">9</span>) - created raw sonic material which Schoen then reinterpreted to create three different scents: Noise, Drone and Bass. 
 <br/>
 
 
