--- a/_posts/2014-09-16-drone.md
+++ b/_posts/2014-09-16-drone.md
@@ -5,7 +5,7 @@ categories: text
 img: drone.jpg
 ---
 
-Tim Hecker’s notion of Drone does not have any direct personal narrative, drawing instead on his imagining of “a speculative day-glow incense from rituals where long-form sound induces levitation.” For Schoen, that translates into aldehydes and air notes, developing to fir and juniper, with a base of patchouli, ambergris, and vetiver. 
+Tim Hecker’s notion of Drone does not have any direct personal narrative, drawing instead on his imagining of “a speculative day-glow incense from rituals where long-form sound induces levitation.” For Geza Schoen, that translates into aldehydes and air notes, developing to fir and juniper, with a base of patchouli, ambergris, and vetiver. 
 
  
 
