--- a/_posts/2014-09-16-bass.md
+++ b/_posts/2014-09-16-bass.md
@@ -5,7 +5,7 @@ categories: text
 img: bass.jpg
 ---
 
-For Steve Goodman, the idea of Bass connects with childhood memories triggered by the sound and the accompanying scent he remembers of a broken, burning vacuum cleaner. Geza translated this to a scent which opens with woodsmoke and rum notes, developing into leather, mastic, and tea notes, and finishing with castoreum and moss, among other scents.
+For Steve Goodman (aka Kode<span class="kode">9</span>), the idea of Bass connects with childhood memories triggered by the sound and the accompanying scent he remembers of a broken, burning vacuum cleaner. Geza Schoen translated this to a scent which opens with woodsmoke and rum notes, developing into leather, mastic, and tea notes, and finishing with castoreum and moss, among other scents.
 
 
 - - -
